# zotbrain

./: .mise.toml  README.md  pyproject.toml
backend/cli/: pyproject.toml
backend/cli/src/: app.py
backend/server/: README.md  example.py  hello.py  pyproject.toml
backend/zotero/: pyproject.toml  test_api.py
backend/zotero/src/zotero/: api.py  hello.py
backend/zotero/src/zotero/models/: __init__.py  collection_response.py  item_repsonse.py  user.py
design-notes/: objective.md  referemce.md
